--- a/smartcontrol/src/main/res/values/colors.xml
+++ b/smartcontrol/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="grep_background">#C9C9C9</color>
+    <color name="transparent">#00000000</color>
 </resources>
