--- a/smartcontrol/src/main/res/xml/authenticator.xml
+++ b/smartcontrol/src/main/res/xml/authenticator.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accountType="com.lenovo.smartcast.type"
+    android:accountType="cn.lenovo.smartcontrol.type"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_lenovo_name"
     android:smallIcon="@mipmap/ic_launcher" />
